--- a/index.html
+++ b/index.html
@@ -1,129 +1,100 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Algeriano_Neo</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Cairo", sans-serif;
-      background: #0e0e0e;
-      color: #fff;
-    }/* الشريط العلوي */
-header {
-  background: #111;
-  padding: 20px 0;
-  text-align: center;
-  font-size: 32px;
-  font-weight: 900;
-  letter-spacing: 2px;
-  color: #d4af37;
-  text-shadow: 0 0 10px #d4af37;
-}
+<!-- زر فتح القائمة -->
+<div class="menu-btn" onclick="toggleMenu()">☰</div>
 
-/* تخطيط الصفحة */
-.container {
-  display: flex;
-}
-
-/* القائمة العمودية */
-nav {
-  width: 260px;
-  background: #151515;
-  padding: 20px;
-  border-left: 2px solid #d4af37;
-  height: 100vh;
-}
-
-nav h3 {
-  margin: 0 0 20px;
-  font-size: 22px;
-  color: #d4af37;
-  border-bottom: 1px solid #333;
-  padding-bottom: 10px;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-nav ul li {
-  margin: 15px 0;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 18px;
-  padding: 10px;
-  display: block;
-  border-radius: 8px;
-  transition: 0.3s;
-}
-
-nav ul li a:hover {
-  background: #d4af37;
-  color: #000;
-}
-
-/* المحتوى */
-.content {
-  flex: 1;
-  padding: 40px;
-}
-
-.hero {
-  background: linear-gradient(#000000aa, #000000aa), url('banner.jpg');
-  background-size: cover;
-  background-position: center;
-  padding: 80px;
-  border-radius: 20px;
-  text-align: center;
-  box-shadow: 0 0 25px #000;
-}
-
-.hero h1 {
-  font-size: 48px;
-  margin-bottom: 20px;
-  color: #d4af37;
-  text-shadow: 0 0 15px #d4af37;
-}
-
-.hero p {
-  font-size: 22px;
-  line-height: 1.7;
-  opacity: 0.9;
-}
-
-  </style>
-</head><body>
-  <header>Algeriano_Neo</header>  <div class="container"><!-- القائمة العمودية -->
-<nav>
-  <h3>الأقسام</h3>
-  <ul>
-    <li><a href="#">الصفحة الرئيسية</a></li>
-    <li><a href="#">التجارة</a></li>
-    <li><a href="#">الخدمات</a></li>
-    <li><a href="#">الترفيه</a></li>
-    <li><a href="#">الصحة</a></li>
-    <li><a href="#">النقل</a></li>
-    <li><a href="#">قسم المرأة</a></li>
-  </ul>
-</nav>
-
-<!-- منطقة المحتوى -->
-<div class="content">
-  <div class="hero">
-    <h1>مرحباً بكم في عالم الفخامة</h1>
-    <p>
-      منصة متعددة الخدمات تجمع بين التجارة، الترفيه، الصحة، والخدمات الذكية<br>
-      كل شيء تحت نظام واحد... عالم جديد بنكهة جزائرية.
-    </p>
-  </div>
+<!-- القائمة -->
+<div id="sidebar" class="sidebar">
+    <h2 class="sidebar-title">الأقسام</h2>
+    <ul class="menu">
+        <li><a class="active" href="#">الصفحة الرئيسية</a></li>
+        <li><a href="#">التجارة</a></li>
+        <li><a href="#">الخدمات</a></li>
+        <li><a href="#">الترفيه</a></li>
+        <li><a href="#">الصحة</a></li>
+        <li><a href="#">النقل</a></li>
+        <li><a href="#">قسم المرأة</a></li>
+    </ul>
 </div>
 
-  </div>
-</body>
-</html>
+<style>
+/* زر القائمة */
+.menu-btn {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    background: gold;
+    padding: 10px 14px;
+    border-radius: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1001;
+    color: black;
+    font-weight: bold;
+}
+
+/* القائمة المنزلقة */
+.sidebar {
+    width: 260px;
+    height: 100vh;
+    background: #0d0d0d;
+    border-left: 4px solid gold;
+    padding: 20px;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    transition: 0.3s ease;
+    box-shadow: -5px 0 20px rgba(255, 215, 0, 0.2);
+    z-index: 1000;
+}
+
+/* يظهر */
+.sidebar.open {
+    right: 0;
+}
+
+.sidebar-title {
+    color: gold;
+    font-size: 26px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    text-align: right;
+}
+
+.menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu li {
+    margin: 12px 0;
+}
+
+.menu a {
+    display: block;
+    padding: 12px 15px;
+    background: #1a1a1a;
+    border-radius: 12px;
+    text-decoration: none;
+    color: #e5e5e5;
+    font-size: 19px;
+    text-align: right;
+    transition: 0.25s;
+}
+
+.menu a:hover {
+    background: #2d2d2d;
+    transform: translateX(-8px);
+}
+
+.menu .active {
+    background: gold;
+    color: black;
+    font-weight: bold;
+}
+</style>
+
+<script>
+function toggleMenu() {
+    document.getElementById("sidebar").classList.toggle("open");
+}
+</script>
