Update sidebar menu and styling
Refactor HTML structure and styles for sidebar menu.

--- a/index.html
+++ b/index.html
@@ -1,149 +1,139 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Algeriano_NEO</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Algeriano_NEO</title>
 
-<style>
-body {
-    margin: 0;
-    background: #000;
-    font-family: "Cairo", sans-serif;
-    color: white;
-}
+    <style>
+        body {
+            margin: 0;
+            background: #000;
+            font-family: "Cairo", sans-serif;
+            color: white;
+            overflow-x: hidden;
+        }
 
-/* زر فتح القائمة */
-.menu-btn {
-    position: fixed;
-    top: 15px;
-    right: 15px;
-    background: gold;
-    padding: 10px 14px;
-    border-radius: 10px;
-    font-size: 24px;
-    cursor: pointer;
-    z-index: 1001;
-    color: black;
-    font-weight: bold;
-}
+        /* خلفية ذهبية على الأطراف */
+        .gold-edge {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 12px;
+            height: 100vh;
+            background: linear-gradient(to bottom, #ffd700, #b38b00);
+        }
 
-/* القائمة المنزلقة */
-.sidebar {
-    width: 260px;
-    height: 100vh;
-    background: #0d0d0d;
-    border-left: 4px solid gold;
-    padding: 20px;
-    position: fixed;
-    top: 0;
-    right: -300px;
-    transition: 0.3s ease;
-    box-shadow: -5px 0 20px rgba(255, 215, 0, 0.2);
-    z-index: 1000;
-}
+        /* زر المينيو */
+        .menu-btn {
+            position: fixed;
+            top: 25px;
+            right: 25px;
+            background: #ffd700;
+            padding: 18px;
+            border-radius: 14px;
+            cursor: pointer;
+            z-index: 2000;
+            box-shadow: 0 0 20px #ffdf4f;
+        }
 
-.sidebar.open {
-    right: 0;
-}
+        .menu-btn div {
+            width: 28px;
+            height: 4px;
+            background: black;
+            margin: 5px 0;
+            border-radius: 3px;
+        }
 
-.sidebar-title {
-    color: gold;
-    font-size: 26px;
-    margin-bottom: 20px;
-    font-weight: 700;
-    text-align: right;
-}
+        /* القائمة العمودية */
+        .side-menu {
+            position: fixed;
+            top: 0;
+            right: -260px;
+            width: 240px;
+            height: 100vh;
+            background: rgba(20, 20, 20, 0.97);
+            backdrop-filter: blur(6px);
+            box-shadow: -5px 0 15px rgba(255, 215, 0, 0.4);
+            padding-top: 100px;
+            transition: 0.4s;
+            z-index: 1900;
+        }
 
-.menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+        .side-menu a {
+            display: block;
+            padding: 18px 25px;
+            font-size: 20px;
+            color: #ffd700;
+            text-decoration: none;
+            border-bottom: 1px solid rgba(255, 215, 0, 0.2);
+            transition: 0.2s;
+        }
 
-.menu li {
-    margin: 12px 0;
-}
+        .side-menu a:hover {
+            background: rgba(255, 215, 0, 0.15);
+            padding-right: 35px;
+        }
 
-.menu a {
-    display: block;
-    padding: 12px 15px;
-    background: #1a1a1a;
-    border-radius: 12px;
-    text-decoration: none;
-    color: #e5e5e5;
-    font-size: 19px;
-    text-align: right;
-    transition: 0.25s;
-}
+        /* العنوان */
+        h1 {
+            text-align: center;
+            margin-top: 170px;
+            font-size: 55px;
+            color: #ffd700;
+            text-shadow: 0 0 25px #ffd700;
+        }
 
-.menu a:hover {
-    background: #2d2d2d;
-    transform: translateX(-8px);
-}
+        .desc {
+            text-align: center;
+            font-size: 28px;
+            width: 85%;
+            margin: auto;
+            line-height: 1.9;
+            color: #e6e6e6;
+        }
+    </style>
 
-.menu .active {
-    background: gold;
-    color: black;
-    font-weight: bold;
-}
-
-/* محتوى الصفحة */
-.header {
-    text-align: center;
-    padding-top: 80px;
-}
-
-.title {
-    font-size: 38px;
-    color: gold;
-    font-weight: 800;
-    text-shadow: 0 0 12px gold;
-}
-
-.desc {
-    font-size: 20px;
-    color: #ddd;
-    padding: 20px;
-    text-align: center;
-    line-height: 1.7;
-}
-</style>
+    <script>
+        function toggleMenu() {
+            let menu = document.getElementById("menu");
+            if (menu.style.right === "0px") {
+                menu.style.right = "-260px";
+            } else {
+                menu.style.right = "0px";
+            }
+        }
+    </script>
 </head>
 
 <body>
 
-<!-- زر القائمة -->
-<div class="menu-btn" onclick="toggleMenu()">☰</div>
+    <div class="gold-edge"></div>
 
-<!-- القائمة -->
-<div id="sidebar" class="sidebar">
-    <h2 class="sidebar-title">الأقسام</h2>
-    <ul class="menu">
-        <li><a class="active" href="#">الصفحة الرئيسية</a></li>
-        <li><a href="#">التجارة</a></li>
-        <li><a href="#">الخدمات</a></li>
-        <li><a href="#">الترفيه</a></li>
-        <li><a href="#">الصحة</a></li>
-        <li><a href="#">النقل</a></li>
-        <li><a href="#">قسم المرأة</a></li>
-    </ul>
-</div>
+    <!-- زر القائمة -->
+    <div class="menu-btn" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 
-<!-- محتوى الصفحة -->
-<div class="header">
-    <h1 class="title">Algeriano_NEO</h1>
+    <!-- القائمة العمودية -->
+    <div class="side-menu" id="menu">
+        <a href="#">الصفحة الرئيسية</a>
+        <a href="#">التجارة</a>
+        <a href="#">الخدمات</a>
+        <a href="#">الترفيه</a>
+        <a href="#">النقل والاشتراك</a>
+        <a href="#">قسم المرأة</a>
+        <a href="#">الصحة</a>
+    </div>
+
+    <h1>Algeriano_NEO</h1>
+
     <p class="desc">
         منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات  
         في نظام واحد فخم من الجيل الجديد.
     </p>
-</div>
-
-<script>
-function toggleMenu() {
-    document.getElementById("sidebar").classList.toggle("open");
-}
-</script>
 
 </body>
 </html>
