--- a/index.html
+++ b/index.html
@@ -1,139 +1,126 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algeriano_NEO</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Algeriano_NEO</title>
 
-    <style>
-        body {
-            margin: 0;
-            background: #000;
-            font-family: "Cairo", sans-serif;
-            color: white;
-            overflow-x: hidden;
-        }
+<!-- خط راقي -->
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
 
-        /* خلفية ذهبية على الأطراف */
-        .gold-edge {
-            position: fixed;
-            top: 0;
-            right: 0;
-            width: 12px;
-            height: 100vh;
-            background: linear-gradient(to bottom, #ffd700, #b38b00);
-        }
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background: #000;
+        color: #eee;
+        font-family: 'Tajawal', sans-serif;
+        text-align: center;
+    }
 
-        /* زر المينيو */
-        .menu-btn {
-            position: fixed;
-            top: 25px;
-            right: 25px;
-            background: #ffd700;
-            padding: 18px;
-            border-radius: 14px;
-            cursor: pointer;
-            z-index: 2000;
-            box-shadow: 0 0 20px #ffdf4f;
-        }
+    /* العنوان */
+    h1 {
+        font-size: 2.8rem;
+        margin-top: 140px;
+        color: #d4af37; /* ذهبي مات */
+        font-weight: 700;
+        letter-spacing: 1px;
+    }
 
-        .menu-btn div {
-            width: 28px;
-            height: 4px;
-            background: black;
-            margin: 5px 0;
-            border-radius: 3px;
-        }
+    /* الوصف */
+    p {
+        font-size: 1.3rem;
+        width: 90%;
+        margin: 20px auto;
+        line-height: 1.8;
+        color: #f1f1f1;
+    }
 
-        /* القائمة العمودية */
-        .side-menu {
-            position: fixed;
-            top: 0;
-            right: -260px;
-            width: 240px;
-            height: 100vh;
-            background: rgba(20, 20, 20, 0.97);
-            backdrop-filter: blur(6px);
-            box-shadow: -5px 0 15px rgba(255, 215, 0, 0.4);
-            padding-top: 100px;
-            transition: 0.4s;
-            z-index: 1900;
-        }
+    /* زر القائمة */
+    .menu-btn {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        background: #d4af37; /* ذهبي مات */
+        width: 55px;
+        height: 55px;
+        border-radius: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        box-shadow: 0 0 10px #000;
+    }
 
-        .side-menu a {
-            display: block;
-            padding: 18px 25px;
-            font-size: 20px;
-            color: #ffd700;
-            text-decoration: none;
-            border-bottom: 1px solid rgba(255, 215, 0, 0.2);
-            transition: 0.2s;
-        }
+    .menu-btn div {
+        width: 30px;
+        height: 4px;
+        background: #000;
+        margin: 4px 0;
+        border-radius: 4px;
+    }
 
-        .side-menu a:hover {
-            background: rgba(255, 215, 0, 0.15);
-            padding-right: 35px;
-        }
+    /* القائمة العمودية */
+    .sidebar {
+        position: fixed;
+        top: 0;
+        right: -260px;
+        width: 260px;
+        height: 100%;
+        background: #111;
+        padding-top: 80px;
+        transition: 0.3s;
+        border-left: 2px solid #d4af37;
+    }
 
-        /* العنوان */
-        h1 {
-            text-align: center;
-            margin-top: 170px;
-            font-size: 55px;
-            color: #ffd700;
-            text-shadow: 0 0 25px #ffd700;
-        }
+    .sidebar a {
+        display: block;
+        padding: 18px;
+        font-size: 1.2rem;
+        color: #d4af37;
+        text-decoration: none;
+    }
 
-        .desc {
-            text-align: center;
-            font-size: 28px;
-            width: 85%;
-            margin: auto;
-            line-height: 1.9;
-            color: #e6e6e6;
-        }
-    </style>
+    .sidebar a:hover {
+        background: #222;
+    }
 
-    <script>
-        function toggleMenu() {
-            let menu = document.getElementById("menu");
-            if (menu.style.right === "0px") {
-                menu.style.right = "-260px";
-            } else {
-                menu.style.right = "0px";
-            }
-        }
-    </script>
+    .show {
+        right: 0 !important;
+    }
+</style>
+
+<script>
+    function toggleMenu() {
+        document.getElementById("side").classList.toggle("show");
+    }
+</script>
+
 </head>
-
 <body>
 
-    <div class="gold-edge"></div>
+<div class="menu-btn" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
 
-    <!-- زر القائمة -->
-    <div class="menu-btn" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+<div id="side" class="sidebar">
+    <a href="#">الصفحة الرئيسية</a>
+    <a href="#">التجارة</a>
+    <a href="#">الترفيه</a>
+    <a href="#">النقل</a>
+    <a href="#">الخدمات</a>
+    <a href="#">قسم المرأة</a>
+    <a href="#">الصحة</a> <!-- تمت إضافة قسم الصحة -->
+</div>
 
-    <!-- القائمة العمودية -->
-    <div class="side-menu" id="menu">
-        <a href="#">الصفحة الرئيسية</a>
-        <a href="#">التجارة</a>
-        <a href="#">الخدمات</a>
-        <a href="#">الترفيه</a>
-        <a href="#">النقل والاشتراك</a>
-        <a href="#">قسم المرأة</a>
-        <a href="#">الصحة</a>
-    </div>
+<h1>Algeriano_NEO</h1>
 
-    <h1>Algeriano_NEO</h1>
-
-    <p class="desc">
-        منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات  
-        في نظام واحد فخم من الجيل الجديد.
-    </p>
+<p>
+منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات  
+في نظام واحد فخم من الجيل الجديد.
+</p>
 
 </body>
 </html>
