Refactor sidebar and menu button styles
Updated styling for sidebar and menu button. Improved layout and visibility.

--- a/index.html
+++ b/index.html
@@ -1,128 +1,15 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Algeriano_NEO</title>
-
 <style>
   body {
     margin: 0;
-    padding: 0;
     background: #000;
-    color: #f5f5f5;
+    color: #fff;
     font-family: "Cairo", sans-serif;
     text-align: center;
-  }
+  }/* زر القائمة */ .menu-btn { position: fixed; top: 20px; left: 20px; width: 55px; height: 55px; background: #111; border-radius: 14px; display: flex; justify-content: center; align-items: center; cursor: pointer; border: 1px solid #444; box-shadow: 0 0 18px rgba(255,255,255,0.05); transition: 0.3s; z-index: 1000; } .menu-btn:hover { background: #1a1a1a; } .menu-btn div { width: 33px; height: 4px; background: #fff; margin: 5px 0; border-radius: 4px; }
 
-  /* --- زر القائمة --- */
-  .menu-btn {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    width: 55px;
-    height: 55px;
-    background: #222; 
-    border-radius: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: 0 0 12px #000;
-    transition: 0.3s;
-  }
-  .menu-btn:hover { background: #333; }
-
-  .menu-btn div {
-    width: 35px;
-    height: 4px;
-    background: #eee;
-    margin: 6px 0;
-    border-radius: 4px;
-  }
-
-  /* --- القائمة الجانبية --- */
-  .sidebar {
-    position: fixed;
-    right: -260px;
-    top: 0;
-    height: 100%;
-    width: 260px;
-    background: #111;
-    padding-top: 100px;
-    transition: 0.4s;
-    box-shadow: -4px 0 12px rgba(0,0,0,0.6);
-  }
-
-  .sidebar a {
-    display: block;
-    padding: 18px;
-    color: #ddd;
-    text-decoration: none;
-    font-size: 20px;
-    border-bottom: 1px solid #222;
-    transition: 0.3s;
-  }
-  .sidebar a:hover {
-    background: #222;
-    padding-right: 30px;
-  }
-
-  /* --- المحتوى الرئيسي --- */
-  .hero {
-    margin-top: 160px;
-    padding: 20px;
-  }
-
-  h1 {
-    font-size: 42px;
-    margin-bottom: 25px;
-    font-weight: bold;
-    color: #eaeaea;
-  }
-
-  p {
-    line-height: 2;
-    font-size: 22px;
-  }
-
-</style>
-
-<script>
-function toggleMenu() {
-  const sidebar = document.getElementById("sideMenu");
-  sidebar.style.right = sidebar.style.right === "0px" ? "-260px" : "0px";
-}
-</script>
-</head>
-
-<body>
-
-<!-- زر القائمة -->
-<div class="menu-btn" onclick="toggleMenu()">
-  <div></div>
-  <div></div>
-  <div></div>
-</div>
-
-<!-- القائمة العمودية -->
-<div class="sidebar" id="sideMenu">
-  <a href="#">التجارة</a>
-  <a href="#">الخدمات</a>
-  <a href="#">النقل</a>
-  <a href="#">الترفيه</a>
-  <a href="#">الصحة</a>
-  <a href="#">قسم المرأة</a>
-</div>
-
-<!-- المحتوى -->
-<div class="hero">
-  <h1>Algeriano_NEO</h1>
-  <p>
-    منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات في نظام واحد.<br>
-    فخامة من الجيل الجديد.
-  </p>
-</div>
-
-</body>
-</html>
+/* القائمة الجانبية */ .sidebar { position: fixed; top: 0; right: -260px; width: 260px; height: 100%; background: #111; padding: 20px; box-shadow: -5px 0 20px rgba(0,0,0,0.4); transition: 0.4s; z-index: 999; } .sidebar.open { right: 0; } .sidebar h3 { margin-top: 0; margin-bottom: 25px; font-size: 22px; border-bottom: 1px solid #444; padding-bottom: 10px; } .sidebar a { display: block; padding: 12px; margin: 8px 0; background: #1b1b1b; text-decoration: none; color: #fff; font-size: 18px; border-radius: 10px; transition: 0.
