--- a/index.html
+++ b/index.html
@@ -12,4 +12,30 @@
     text-align: center;
   }/* زر القائمة */ .menu-btn { position: fixed; top: 20px; left: 20px; width: 55px; height: 55px; background: #111; border-radius: 14px; display: flex; justify-content: center; align-items: center; cursor: pointer; border: 1px solid #444; box-shadow: 0 0 18px rgba(255,255,255,0.05); transition: 0.3s; z-index: 1000; } .menu-btn:hover { background: #1a1a1a; } .menu-btn div { width: 33px; height: 4px; background: #fff; margin: 5px 0; border-radius: 4px; }
 
-/* القائمة الجانبية */ .sidebar { position: fixed; top: 0; right: -260px; width: 260px; height: 100%; background: #111; padding: 20px; box-shadow: -5px 0 20px rgba(0,0,0,0.4); transition: 0.4s; z-index: 999; } .sidebar.open { right: 0; } .sidebar h3 { margin-top: 0; margin-bottom: 25px; font-size: 22px; border-bottom: 1px solid #444; padding-bottom: 10px; } .sidebar a { display: block; padding: 12px; margin: 8px 0; background: #1b1b1b; text-decoration: none; color: #fff; font-size: 18px; border-radius: 10px; transition: 0.
+/* القائمة الجانبية */ .sidebar { position: fixed; top: 0; right: -260px; width: 260px; height: 100%; background: #111; padding: 20px; box-shadow: -5px 0 20px rgba(0,0,0,0.4); transition: 0.4s; z-index: 999; } .sidebar.open { right: 0; } .sidebar h3 { margin-top: 0; margin-bottom: 25px; font-size: 22px; border-bottom: 1px solid #444; padding-bottom: 10px; } .sidebar a { display: block; padding: 12px; margin: 8px 0; background: #1b1b1b; text-decoration: none; color: #fff; font-size: 18px; border-radius: 10px; transition: 0.3s; } .sidebar a:hover { background: #333; }
+
+/* العنوان */ h1 { margin-top: 130px; font-size: 48px; font-weight: 700; } p { font-size: 22px; width: 90%; margin: auto; line-height: 1.7; } </style>
+
+</head>
+<body><!-- زر القائمة --><div class="menu-btn" onclick="toggleMenu()">
+  <div></div>
+  <div></div>
+  <div></div>
+</div><!-- القائمة الجانبية --><div class="sidebar" id="sidebar">
+  <h3>القائمة الرئيسية</h3>
+  <a href="#">التجارة</a>
+  <a href="#">الترفيه</a>
+  <a href="#">النقل</a>
+  <a href="#">الخدمات</a>
+  <a href="#">قسم المرأة</a>
+  <a href="#">الصحة</a>
+</div><!-- المحتوى الرئيسي --><h1>Algeriano_NEO</h1>
+<p>
+  منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات في نظام واحد.<br>
+  فخامة من الجيل الجديد.
+</p><script>
+function toggleMenu() {
+  document.getElementById('sidebar').classList.toggle('open');
+}
+</script></body>
+</html>
