--- a/index.html
+++ b/index.html
@@ -1,41 +1,118 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Algeriano_NEO</title>
-<style>
-  body {
-    margin: 0;
-    background: #000;
-    color: #fff;
-    font-family: "Cairo", sans-serif;
-    text-align: center;
-  }/* زر القائمة */ .menu-btn { position: fixed; top: 20px; left: 20px; width: 55px; height: 55px; background: #111; border-radius: 14px; display: flex; justify-content: center; align-items: center; cursor: pointer; border: 1px solid #444; box-shadow: 0 0 18px rgba(255,255,255,0.05); transition: 0.3s; z-index: 1000; } .menu-btn:hover { background: #1a1a1a; } .menu-btn div { width: 33px; height: 4px; background: #fff; margin: 5px 0; border-radius: 4px; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Algeriano_NEO</title>
 
-/* القائمة الجانبية */ .sidebar { position: fixed; top: 0; right: -260px; width: 260px; height: 100%; background: #111; padding: 20px; box-shadow: -5px 0 20px rgba(0,0,0,0.4); transition: 0.4s; z-index: 999; } .sidebar.open { right: 0; } .sidebar h3 { margin-top: 0; margin-bottom: 25px; font-size: 22px; border-bottom: 1px solid #444; padding-bottom: 10px; } .sidebar a { display: block; padding: 12px; margin: 8px 0; background: #1b1b1b; text-decoration: none; color: #fff; font-size: 18px; border-radius: 10px; transition: 0.3s; } .sidebar a:hover { background: #333; }
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Tahoma', sans-serif;
+            background: #000;
+            color: #fff;
+            text-align: center;
+        }
 
-/* العنوان */ h1 { margin-top: 130px; font-size: 48px; font-weight: 700; } p { font-size: 22px; width: 90%; margin: auto; line-height: 1.7; } </style>
+        /* زر القائمة (ثلاث خطوط) */
+        .menu-btn {
+            position: fixed;
+            top: 25px;
+            right: 25px;
+            width: 55px;
+            height: 55px;
+            background: #111;
+            border-radius: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            box-shadow: 0 0 10px rgba(0, 170, 255, 0.4);
+        }
+        .menu-btn div {
+            width: 35px;
+            height: 4px;
+            background: #0af;
+            margin: 4px 0;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+
+        /* القائمة الجانبية */
+        .sidebar {
+            position: fixed;
+            top: 0;
+            right: -270px;
+            width: 270px;
+            height: 100%;
+            background: #050505;
+            padding-top: 100px;
+            transition: 0.4s;
+            box-shadow: -5px 0 15px rgba(0, 170, 255, 0.3);
+        }
+        .sidebar a {
+            display: block;
+            padding: 18px;
+            font-size: 20px;
+            color: #fff;
+            text-decoration: none;
+            border-bottom: 1px solid #111;
+            transition: 0.2s;
+        }
+        .sidebar a:hover {
+            background: #0af;
+            color: #000;
+        }
+
+        /* العنوان الرئيسي */
+        h1 {
+            font-size: 45px;
+            margin-top: 160px;
+            text-shadow: 0 0 15px #0af;
+        }
+
+        p {
+            font-size: 22px;
+            width: 90%;
+            margin: auto;
+            line-height: 1.7;
+            margin-top: 20px;
+            color: #ddd;
+        }
+    </style>
 
 </head>
-<body><!-- زر القائمة --><div class="menu-btn" onclick="toggleMenu()">
-  <div></div>
-  <div></div>
-  <div></div>
-</div><!-- القائمة الجانبية --><div class="sidebar" id="sidebar">
-  <h3>القائمة الرئيسية</h3>
-  <a href="#">التجارة</a>
-  <a href="#">الترفيه</a>
-  <a href="#">النقل</a>
-  <a href="#">الخدمات</a>
-  <a href="#">قسم المرأة</a>
-  <a href="#">الصحة</a>
-</div><!-- المحتوى الرئيسي --><h1>Algeriano_NEO</h1>
-<p>
-  منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات في نظام واحد.<br>
-  فخامة من الجيل الجديد.
-</p><script>
+<body>
+
+    <!-- زر القائمة -->
+    <div class="menu-btn" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <!-- القائمة الجانبية -->
+    <div class="sidebar" id="sidebar">
+        <a href="#">التجارة</a>
+        <a href="#">الخدمات</a>
+        <a href="#">الترفيه</a>
+        <a href="#">النقل</a>
+        <a href="#">الصحة</a>
+    </div>
+
+    <!-- المحتوى الرئيسي -->
+    <h1>Algeriano_NEO</h1>
+    <p>
+        منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات في نظام واحد.
+        فخامة من الجيل الجديد.
+    </p>
+
+<script>
 function toggleMenu() {
-  document.getElementById('sidebar').classList.toggle('open');
+    let bar = document.getElementById("sidebar");
+    bar.style.right = bar.style.right === "0px" ? "-270px" : "0px";
 }
-</script></body>
+</script>
+
+</body>
 </html>
