--- a/index.html
+++ b/index.html
@@ -1,82 +1,77 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Algeriano_NEO</title>
 
     <style>
         body {
             margin: 0;
-            font-family: 'Tahoma', sans-serif;
+            padding: 0;
             background: #000;
-            color: #fff;
-            text-align: center;
+            color: white;
+            font-family: "Tahoma", sans-serif;
+            overflow-x: hidden;
         }
 
-        /* زر القائمة (ثلاث خطوط) */
+        /* زر القائمة */
         .menu-btn {
-            position: fixed;
-            top: 25px;
-            right: 25px;
             width: 55px;
-            height: 55px;
-            background: #111;
-            border-radius: 15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            margin: 20px;
             cursor: pointer;
-            box-shadow: 0 0 10px rgba(0, 170, 255, 0.4);
-        }
-        .menu-btn div {
-            width: 35px;
-            height: 4px;
-            background: #0af;
-            margin: 4px 0;
-            border-radius: 5px;
-            transition: 0.3s;
+            filter: drop-shadow(0 0 8px #00eaff);
         }
 
         /* القائمة الجانبية */
         .sidebar {
+            height: 100%;
+            width: 0;
             position: fixed;
             top: 0;
-            right: -270px;
-            width: 270px;
-            height: 100%;
-            background: #050505;
-            padding-top: 100px;
+            right: 0;
+            background: rgba(0, 0, 0, 0.95);
+            backdrop-filter: blur(6px);
+            overflow-x: hidden;
             transition: 0.4s;
-            box-shadow: -5px 0 15px rgba(0, 170, 255, 0.3);
+            padding-top: 80px;
+            box-shadow: -4px 0 20px #00eaff;
         }
+
         .sidebar a {
-            display: block;
-            padding: 18px;
-            font-size: 20px;
-            color: #fff;
+            padding: 18px 25px;
             text-decoration: none;
+            font-size: 26px;
+            color: #fff;
+            display: block;
+            transition: 0.3s;
             border-bottom: 1px solid #111;
-            transition: 0.2s;
+            text-align: center;
         }
+
         .sidebar a:hover {
-            background: #0af;
-            color: #000;
+            background: #00eaff;
+            color: black;
+            font-weight: bold;
+            box-shadow: 0 0 12px #00eaff;
         }
 
         /* العنوان الرئيسي */
-        h1 {
-            font-size: 45px;
-            margin-top: 160px;
-            text-shadow: 0 0 15px #0af;
+        .title {
+            font-size: 56px;
+            font-weight: bold;
+            margin-top: 150px;
+            text-align: center;
+            color: white;
+            text-shadow: 0 0 18px #00eaff;
         }
 
-        p {
-            font-size: 22px;
-            width: 90%;
-            margin: auto;
-            line-height: 1.7;
-            margin-top: 20px;
+        /* الوصف */
+        .desc {
+            font-size: 26px;
+            text-align: center;
+            margin: 20px;
+            line-height: 1.8;
             color: #ddd;
         }
     </style>
@@ -85,34 +80,34 @@
 <body>
 
     <!-- زر القائمة -->
-    <div class="menu-btn" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+    <img src="https://i.imgur.com/EZ8C6vH.png"
+         class="menu-btn"
+         onclick="openSidebar()">
 
     <!-- القائمة الجانبية -->
-    <div class="sidebar" id="sidebar">
+    <div id="sidebar" class="sidebar">
         <a href="#">التجارة</a>
         <a href="#">الخدمات</a>
         <a href="#">الترفيه</a>
-        <a href="#">النقل</a>
+        <a href="#">السائقين</a>
         <a href="#">الصحة</a>
+        <a href="#">المرأة</a>
     </div>
 
     <!-- المحتوى الرئيسي -->
-    <h1>Algeriano_NEO</h1>
-    <p>
-        منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات في نظام واحد.
+    <h1 class="title">Algeriano_NEO</h1>
+
+    <p class="desc">
+        منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات في نظام واحد.<br>
         فخامة من الجيل الجديد.
     </p>
 
-<script>
-function toggleMenu() {
-    let bar = document.getElementById("sidebar");
-    bar.style.right = bar.style.right === "0px" ? "-270px" : "0px";
-}
-</script>
+    <script>
+        function openSidebar() {
+            let sb = document.getElementById("sidebar");
+            sb.style.width = sb.style.width === "280px" ? "0" : "280px";
+        }
+    </script>
 
 </body>
 </html>
