--- a/index.html
+++ b/index.html
@@ -1,113 +1,150 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Algeriano_NEO</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Algeriano_Neo</title>
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #000;
-            color: white;
-            font-family: "Tahoma", sans-serif;
-            overflow-x: hidden;
-        }
+<style>
+body {
+  margin: 0;
+  font-family: "Cairo", sans-serif;
+  background: black;
+  color: white;
+  overflow-x: hidden;
+}
 
-        /* زر القائمة */
-        .menu-btn {
-            width: 55px;
-            margin: 20px;
-            cursor: pointer;
-            filter: drop-shadow(0 0 8px #00eaff);
-        }
+/* خلفية متوهجة فاخرة */
+.glow-left, .glow-right {
+  position: fixed;
+  top: 0;
+  width: 70px;
+  height: 100%;
+  background: #00eaff55;
+  filter: blur(60px);
+  z-index: -1;
+}
+.glow-left { left: 0; }
+.glow-right { right: 0; }
 
-        /* القائمة الجانبية */
-        .sidebar {
-            height: 100%;
-            width: 0;
-            position: fixed;
-            top: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.95);
-            backdrop-filter: blur(6px);
-            overflow-x: hidden;
-            transition: 0.4s;
-            padding-top: 80px;
-            box-shadow: -4px 0 20px #00eaff;
-        }
+/* زر القائمة */
+.menu-btn {
+  position: fixed;
+  top: 18px;
+  right: 18px;
+  background: #00eaff;
+  color: black;
+  padding: 10px 15px;
+  font-size: 26px;
+  border-radius: 10px;
+  cursor: pointer;
+  z-index: 9999;
+  box-shadow: 0 0 12px #00eaff;
+  transition: 0.2s;
+}
+.menu-btn:hover {
+  transform: scale(1.1);
+}
 
-        .sidebar a {
-            padding: 18px 25px;
-            text-decoration: none;
-            font-size: 26px;
-            color: #fff;
-            display: block;
-            transition: 0.3s;
-            border-bottom: 1px solid #111;
-            text-align: center;
-        }
+/* القائمة الجانبية */
+#sidebar {
+  position: fixed;
+  top: 0;
+  right: -270px;
+  width: 270px;
+  height: 100%;
+  background: #000000ee;
+  transition: 0.35s ease-in-out;
+  padding-top: 90px;
+  z-index: 9998;
+  backdrop-filter: blur(6px);
+  border-left: 2px solid #00eaff55;
+}
 
-        .sidebar a:hover {
-            background: #00eaff;
-            color: black;
-            font-weight: bold;
-            box-shadow: 0 0 12px #00eaff;
-        }
+#sidebar.open {
+  right: 0;
+}
 
-        /* العنوان الرئيسي */
-        .title {
-            font-size: 56px;
-            font-weight: bold;
-            margin-top: 150px;
-            text-align: center;
-            color: white;
-            text-shadow: 0 0 18px #00eaff;
-        }
+#sidebar a {
+  display: block;
+  padding: 22px;
+  text-align: center;
+  font-size: 24px;
+  color: white;
+  border-bottom: 1px solid #111;
+  transition: 0.2s;
+}
 
-        /* الوصف */
-        .desc {
-            font-size: 26px;
-            text-align: center;
-            margin: 20px;
-            line-height: 1.8;
-            color: #ddd;
-        }
-    </style>
+#sidebar a:hover {
+  background: #00eaff;
+  color: black;
+}
 
+/* العنوان الرئيسي */
+h1 {
+  margin-top: 140px;
+  text-align: center;
+  font-size: 52px;
+  color: white;
+  text-shadow: 0 0 18px #00eaff, 0 0 30px #00eaffaa;
+}
+
+/* وصف */
+p {
+  text-align: center;
+  font-size: 22px;
+  color: #ddd;
+  margin-top: -10px;
+}
+
+/* فوتر */
+footer {
+  margin-top: 80px;
+  text-align: center;
+  font-size: 18px;
+  color: #666;
+}
+</style>
 </head>
+
 <body>
 
-    <!-- زر القائمة -->
-    <img src="https://i.imgur.com/EZ8C6vH.png"
-         class="menu-btn"
-         onclick="openSidebar()">
+<!-- تأثير الإضاءة -->
+<div class="glow-left"></div>
+<div class="glow-right"></div>
 
-    <!-- القائمة الجانبية -->
-    <div id="sidebar" class="sidebar">
-        <a href="#">التجارة</a>
-        <a href="#">الخدمات</a>
-        <a href="#">الترفيه</a>
-        <a href="#">السائقين</a>
-        <a href="#">الصحة</a>
-        <a href="#">المرأة</a>
-    </div>
+<!-- زر القائمة -->
+<div class="menu-btn" onclick="toggleMenu()">☰</div>
 
-    <!-- المحتوى الرئيسي -->
-    <h1 class="title">Algeriano_NEO</h1>
+<!-- القائمة الجانبية -->
+<div id="sidebar">
+  <a href="#">التجارة</a>
+  <a href="#">الخدمات</a>
+  <a href="#">الترفيه</a>
+  <a href="#">السائقين</a>
+  <a href="#">الصحة</a>
+  <a href="#">المرأة</a>
+</div>
 
-    <p class="desc">
-        منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، والخدمات في نظام واحد.<br>
-        فخامة من الجيل الجديد.
-    </p>
+<!-- المحتوى الرئيسي -->
+<h1>Algeriano_Neo</h1>
+<p>منصة متعددة الخدمات — تجارة، ترفيه، صحة، نقل، واهتمام خاص بالمرأة.</p>
 
-    <script>
-        function openSidebar() {
-            let sb = document.getElementById("sidebar");
-            sb.style.width = sb.style.width === "280px" ? "0" : "280px";
-        }
-    </script>
+<footer>© 2025 Algeriano_Neo — All Rights Reserved</footer>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById("sidebar");
+  menu.classList.toggle("open");
+}
+
+window.onclick = function(e) {
+  const menu = document.getElementById("sidebar");
+  if (!menu.contains(e.target) && !e.target.classList.contains("menu-btn")) {
+    menu.classList.remove("open");
+  }
+};
+</script>
 
 </body>
 </html>
